IN PROGRESS - issue AP-5663: Font size in node description view (help view on the right) too small on some systems (linux/mac) https://knime-com.atlassian.net/browse/AP-5663
Setting global font size to fixed 10px to test.

--- a/org.knime.product/intro/css/knime.css
+++ b/org.knime.product/intro/css/knime.css
@@ -3,7 +3,7 @@
 }
 
 html {
-	font-size:62.5%; 
+	font-size:10px; 
 }
 
 body {
