--- a/org.knime.workbench.repository/src/eclipse/org/knime/workbench/repository/util/style.css
+++ b/org.knime.workbench.repository/src/eclipse/org/knime/workbench/repository/util/style.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 
 html {
-	font-size: 62.5%;
+	font-size: 10px;
 }
 
 body.origin {
